# Splunkless

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md
splunkless/: __init__.py  bucket_parser.py  cli.py  ingest.py  journal_reader.py  models.py  search.py  tsidx_reader.py
